--- a/rb_gruetter_sogukoglu.Rmd
+++ b/rb_gruetter_sogukoglu.Rmd
@@ -55,7 +55,7 @@ Relatively quickly something catches our eye. This is when we look at the fuelTy
 
 gam.starting.model.2 <- update(gam.starting.model.1, . ~ . - fuelType)
 
-summary(gam.starting.model.1)$r.squared
+summary(gam.starting.model.2)
 
 ```
 
@@ -65,7 +65,7 @@ The result looks much better. If we now look at the R-squared-value, we can see 
 
 gam.starting.model.3 <- update(gam.starting.model.2, . ~ . - vehicleType)
 
-summary(gam.starting.model.1)
+summary(gam.starting.model.3)
 
 ```
 
@@ -75,7 +75,10 @@ We see that the R-Squared again deteriorates only very slightly. What we continu
 
 gam.starting.model.4 <- update(gam.starting.model.3, . ~ . - brand)
 
-summary(gam.starting.model.1)
+summary(gam.starting.model.4)
+
+starting.model <- price ~ as.factor(yearOfRegistration) + gearbox +
+   s(powerPS) + kilometer + age
 
 ```
 
@@ -84,16 +87,15 @@ The result looks very good. All factors show: There is strong evidence that thes
 **price ~ yearOfRegistration + gearbox + s(powerPS) + kilometer + age**
 
 ## 3.2 A more complex model
-Now that we have derived a relatively simple starting model, which considers only a single polynomial effect, we need a more complex model, which we can compare with the simple model. To get an appropriate comparison, we take our starting model, which we had defined before the model development, and add interactions to it. Thus, this model considers a new level of complexity on the one hand and more predictors on the other hand. The graphical analysis had shown a slight interaction effect between kilometer and gearbox. We would now like to take this into account. The following model results as comparison model:
+Now that we have derived a relatively simple starting model, which considers only a single polynomial effect, we need a more complex model, which we can compare with the simple model. To get an appropriate comparison, we take our starting model and add interactions to it. Thus, this model considers a new level of complexity. The graphical analysis had shown a slight interaction effect between kilometer and gearbox. We would now like to take this into account. The following model results as comparison model:
 
-**price ~ yearOfRegistration + brand + fuelType + vehicleType +
-s(powerPS) + gearbox * kilometer + age**
+**price ~ yearOfRegistration + s(powerPS) + gearbox * kilometer + age**
 
 In R we build the following model:
 
 ```{r message=FALSE}
 
-complex.model.1 <- price ~ as.factor(yearOfRegistration) + brand + fuelType + vehicleType +
+complex.model.1 <- price ~ as.factor(yearOfRegistration) +
    s(powerPS) + gearbox * kilometer + age
 
 gam.complex.model.1 <- gam(complex.model.1, data = df.cars)
@@ -105,6 +107,32 @@ summary(gam.complex.model.1)
 Not surprisingly, this model shows a higher R-squared value than the simpler starting model.
 
 ## 3.3 A comparison of the models
+We use a 10-fold cross validation to compare the two models.
+
+```{r message=FALSE}
+
+for(i in 1:10){
+   df.cars.train.id <- sample(seq_len(nrow(df.cars)),size = floor(0.75*nrow(df.cars)))
+   df.cars.train <- df.cars[df.cars.train.id,]
+   df.cars.test <- df.cars[-df.cars.train.id,]
+   
+   #predict data with starting model
+   gam.starting.model.train <- gam(starting.model, data = df.cars.train)
+   predicted.starting.model.test <- predict(gam.starting.model.train,
+                                              newdata = df.cars.test)
+   r.squared.starting.model <- cor(predicted.starting.model.test, df.cars.test$price)^2
+   
+   #predict data with complex model
+   gam.complex.model.train <- gam(complex.model, data = df.cars.train)
+   predicted.complex.model.test <- predict(gam.complex.model.train,
+                                           newdata = df.cars.test)
+   r.squared.complex.model <- cor(predicted.complex.model.test, df.cars.test$price)^2
+}
+
+mean(r.squared.starting.model)
+mean(r.squared.complex.model)
+
+```
 
 
 # 4. The igraph-Package
