- brought graphical analyis into RMD-file - factorized "age" - removed "yearOfRegistration" as independent variable for starting model and complex model -

--- a/rb_gruetter_sogukoglu.Rmd
+++ b/rb_gruetter_sogukoglu.Rmd
@@ -12,17 +12,273 @@ library(igraphdata)
 ```
 
 # 1. Prepare Data
-MALIK: Dieser Code ist nur dafür da, damit der Rest funktioniert. Kannst du dann so gestalten wie du möchtest.
+
+CSV is read whereby zero values are explicitly marked as NAs:
 ```{r}
 df.cars <- read.csv2(file="autos.csv", sep = ",", header = T, na.strings = c("", " ", "NA"))
+```
+remove NAs:
+```{r}
 df.cars <- na.omit(df.cars)
+df.cars
+```
+To predict depreciation of cars, it is useful to select "price" as the target variable and "kilometres" as well as "yearOfRegistration" could be good independent variables.
+
+With the following plots it is shown how "kilometres" resp. "yearOfRegistration" stand to the variable "price".
+```{r}
+plot(df.cars$price ~df.cars$kilometer)
+```
+
+```{r}
+plot(df.cars$price ~df.cars$yearOfRegistration)
+```
+
+The unrealistic "price" and "yearOfRegistration" data in the plots above clearly show that there are outliers which should be filtered. These unrealistic values are probably caused by failures during crawling.
+
+Filter outliers:
+- To get rid of these unrealistic values, only cars with a value up to 100000 Euros and only the models between 2010 and 2016 are considered. 
+```{r}
 df.cars <- df.cars %>% filter(yearOfRegistration > 2010, 
                               yearOfRegistration < 2016, 
                               price < 100000)
+```
+The following example-boxplot shows that by filtering to the years 2010 - 2016 the graphic became much more visible
+```{r}
+boxplot(df.cars$price ~df.cars$yearOfRegistration)
+```
+
+Columns "lastSeen|nrOfPictures|dateCreated|dateCrawled" are removed since they obviously do not provide useful information.
+Even if it would influence the price, it would probably be a false correlation.
+```{r}
+df.cars = subset(df.cars, select = -c(lastSeen,nrOfPictures,dateCreated,dateCrawled) )
+```
+
+The "age" of the car would be an important value to calculate the depreciation. 
+Since it was not included in the data set, it is inserted here as a new column: 
+(Note: 2016 is the year of data collection)
+```{r}
 df.cars$age <- 2016 - df.cars$yearOfRegistration
 ```
 
+See if/how many "NA"s exist...
+```{r}
+anyNA(df.cars)
+apply(df.cars, MARGIN = 2, 
+      FUN = function(x) {sum(is.na(x))})
+```
+...seems there aren't any which is good.
+
 # 2. Graphical Analysis
+
+We assumed that "yearOfRegistration" and "kilometer" strongly influence the "price". With the following correlation analyis we want to see which variables actually influence the price.
+
+## Correlation analysis 
+The following correlation plot shows which variables influence price:
+```{r}
+predictors = c(colnames(df.cars))
+corrplot(cor(data.matrix(df.cars[predictors]) ))
+```
+
+Above, We see that 
+ - yearOfRegistration
+ - powerPS
+ - age (calculated from yearOfRegistration)
+ - kilometer
+ - name
+ - brand
+ - fuel type
+ - gearbox
+ - vehicle Type
+ - notRepairedDamage
+ - postalCode
+have a certain influence on the price. So, there are also variables that we did not think as having a strong effect previously.
+
+In the following analysis we will take a closer look at the effects of the categorical and numerical variables that influence the price according to the correlation plot.
+
+## Categorical variables
+...lets start with the categorical values. Those are best explaint with boxplots and Anova-tests. 
+
+lets see which are the categorical:
+```{r}
+sapply(df.cars, class)
+```
+...the independent categorical variables to be considered are
+- yearOfRegistration
+ - name
+ - brand
+ - fuel type
+ - gearbox
+ - vehicle Type
+ - notRepairedDamage
+ - postalCode
+ - age
+
+lm.cars below is the dummy model that contains every independent variable. This will be used for comparison with other models:
+```{r}
+lm.cars <- lm(price ~ 1, data = df.cars)
+```
+
+### year of registration
+```{r}
+ggplot(data = df.cars, aes(group=yearOfRegistration, y = price, x = as.factor(yearOfRegistration))) +
+   geom_boxplot() + xlab("year of registration") + ylab("price")
+```
+```{r}
+lm.yearOfRegistration <- lm(price ~ as.factor(yearOfRegistration), data = df.cars)
+anova(lm.cars, lm.yearOfRegistration)
+```
+- The boxplot above clearly shows that the year of registration influences the price, because newer cars cost more. 
+- The anova test shows that there is a strong evidence that at least one year-level influences the price (see p-value) .
+- The anova test shows also that the model only having yearOfRegistration as independent variable has smaller residuals than the dummy model (see RSS).
+
+### name
+Because name has many levels it is not suitable for plotting and Anova-test.
+
+### brand
+```{r}
+ggplot(data = df.cars, aes(group=brand, y = price, x = brand)) +
+   geom_boxplot() + xlab("brand") + ylab("price")
+
+lm.brand <- lm(price ~ brand, data = df.cars)
+anova(lm.cars, lm.brand)
+```
+- The boxplot above clearly shows that the brand influences the price. 
+- The anova test shows that there is a strong evidence that at least one brand influences the price (see p-value) .
+- the anova test shows also that the model only having brand as independent variable has smaller residuals than the dummy model (see RSS).
+
+### fuel type
+```{r}
+ggplot(data = df.cars, aes(group = fuelType, y = price, x = fuelType)) +
+   geom_boxplot() + xlab("fuel type") + ylab("price")
+
+lm.fuelType <- lm(price ~ fuelType, data = df.cars)
+anova(lm.cars, lm.fuelType)
+```
+- The boxplot above certainly shows that the fuel type influences the price. 
+- The anova test shows that there is a strong evidence that at least one fuel type-level influences the price (see p-value) .
+- The anova test shows also that the model only having fuelType as independent variable has smaller residuals than the dummy model (see RSS).
+
+
+### gearbox
+```{r}
+ggplot(data = df.cars, aes(group = gearbox, y = price, x = gearbox)) +
+   geom_boxplot() + xlab("gearbox") + ylab("price")
+
+lm.gearbox <- lm(price ~ gearbox, data = df.cars)
+anova(lm.cars, lm.gearbox)
+```
+- the boxplot above clearly shows that gearbox influences the price. 
+- the anova test shows that there is a strong evidence that at least one gearbox-type influences the price (see p-value) .
+- the anova test shows also that the model only having gearbox as independent variable has smaller residuals than the dummy model (see RSS).
+
+
+### vehicleType
+```{r}
+ggplot(data = df.cars, aes(y = price, x = vehicleType)) +
+   geom_boxplot() + xlab("vehicle type") + ylab("price")
+
+lm.vehicleType <- lm(price ~ vehicleType, data = df.cars)
+anova(lm.cars, lm.vehicleType)
+```
+- the boxplot above clearly shows that the vehicle type influences the price. 
+- the anova test shows that there is a strong evidence that at least one vehicle-type influences the price (see p-value) .
+- the anova test shows also that the model only having vehicleType as independent variable has smaller residuals than the dummy model (see RSS).
+
+
+### notRepairedDamage
+```{r}
+ggplot(data = df.cars, aes(y = price, x = notRepairedDamage)) +
+   geom_boxplot() + xlab("not repaired damage") + ylab("price")
+
+lm.notRepairedDamage <- lm(price ~ notRepairedDamage, data = df.cars)
+anova(lm.cars, lm.notRepairedDamage)
+```
+- the boxplot above clearly shows that the the information whether car has a non-repaired demage or not influences the price.
+- the anova test shows that there is a strong evidence that this information influences the price (see p-value) .
+- the anova test shows also that the model only having this information as independent variable has smaller residuals than the dummy model (see RSS).
+
+### postalCode
+Because postalCode has many levels it is not suitable for plotting and anova test
+
+## age
+```{r}
+ggplot(data = df.cars, aes(y = price, x = as.factor(age))) +
+   geom_boxplot() + xlab("age") + ylab("price")
+
+lm.age <- lm(price ~ as.factor(age), data = df.cars)
+anova(lm.cars, lm.age)
+```
+- The above plot and model (see p-value) show that age has a linear influence on price. 
+
+## Numerical variables
+Lets go on with the numeric variables which are the following:
+ - powerPS
+ - kilometer
+Numeric variables are best explained with a classical plot.
+
+### powerPS
+```{r}
+ggplot(data = df.cars, mapping = aes(y = price, x = powerPS)) + geom_point(alpha = 0.4) +
+   geom_point()  + xlab("PS") +ylab("price") +geom_smooth(method = "gam")
+```
+There is little to recognise. therefore the x axis is logaritised in the following plot:
+```{r}
+ggplot(data = df.cars, mapping = aes(y = price, x = powerPS)) + geom_point(alpha = 0.4) +
+   geom_point()  + xlab("PS") +ylab("price") + scale_x_log10() +geom_smooth(method = "gam")
+```
+In the plot above, one can see that "powerPS" does not show a linear but a quadratic relationship to the "price"
+....following GAM-model confirms that where the p-value us significant: 
+```{r}
+gam.powerPS <- gam(price ~ s(powerPS), data = df.cars)
+summary(gam.powerPS)
+```
+
+
+### kilometer
+```{r}
+ggplot(data = df.cars, mapping = aes(y = price, x = kilometer)) + geom_point(alpha = 0.4) +
+   geom_point()  + xlab("kilometer") +ylab("price") + geom_smooth(method = "gam")
+```
+In plot above, one can see that kilometres seems to have a linear effect on price.
+...floowing model should confirm that:
+```{r}
+lm.kilometer <- lm(price ~ kilometer, data = df.cars)
+summary(lm.kilometer)
+```
+...and indeed the p-value shows that "kilometer" has a linear effect on the price.
+
+### Interaction analysis
+In this section, some analyses regarding possible interactions between an independent categorical variables and a numerical variable are processed.
+
+Based on information from the correlation plot above, there could be interactions between the following variables:
+- factor(yearOfRegistration) : kilometer
+- kilometer : fuelType
+
+Example factor(yearOfRegistration) : kilometer 
+```{r}
+qplot(y = price, x = kilometer, data = df.cars, facets = ~ as.factor(yearOfRegistration)) + geom_smooth()
+```
+Example kilometer : fuelType
+```{r}
+qplot(y = price, x = kilometer, data = df.cars, facets = ~ fuelType) + geom_smooth()
+```
+In both graphs above, a clear interaction is to be recognized, since between the categories clear differences are to be determined.
+
+Linear model for interaction factor(yearOfRegistration) : kilometer
+```{r}
+lm.cars.interaction.1 <- lm(df.cars$price ~ df.cars$kilometer * as.factor(df.cars$yearOfRegistration))
+summary(lm.cars.interaction.1)
+```
+The linear model above confirms a strong interaction between kilometers and the year 2014.
+
+Linear model for interaction fuelType : kilometer
+```{r}
+lm.cars.interaction.2 <- lm(df.cars$price ~ df.cars$kilometer * df.cars$fuelType)
+summary(lm.cars.interaction.2)
+```
+Between kilometer and fuelType there is actually no interaction according to the linear model just above.
+
+
 
 # 3. Modelling
 ## 3.1 The starting model
